Add message handler and email validation

--- a/ui-project/src/app/app.component.html
+++ b/ui-project/src/app/app.component.html
@@ -6,5 +6,5 @@
 </ng-template>
 
 <ng-template #unauth>
-        <app-login (login)="loginedUser($event)"></app-login>
+        <app-login (login)="loginedUser()"></app-login>
 </ng-template>
