--- a/ui-project/src/app/login/login.component.html
+++ b/ui-project/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class=" h-50 w-50 row justify-content-center align-items-center login">
         <table>
             <tr>
-                <td class="spacing pr-2" >
+                <td class="spacing pr-2">
                     <span style="display: inline;">Email</span>
                 </td>
                 <td class="spacing">
@@ -11,15 +11,16 @@
             </tr>
 
             <tr>
-                <td class="spacing pr-2" >
+                <td class="spacing pr-2">
                     <span style="display: inline;">Password</span>
                 </td>
                 <td class="spacing">
-                    <input [(ngModel)]="password" type="text" size="50" pInputText>
+                    <input [(ngModel)]="password" type="password" size="50" pInputText>
                 </td>
             </tr>
 
-        <br/>
+            <br />
+
             <tr>
                 <td class="spacing">
 
