--- a/ui-project/src/app/user-management/user.component.html
+++ b/ui-project/src/app/user-management/user.component.html
@@ -1,1 +1,90 @@
-user
+
+<div class="container mt-4">
+    <div class="row-flex">
+
+        <p-fieldset legend="Add User" [toggleable]="true" [collapsed]="true">
+
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-sm-4">
+    
+                        <div class="row mt-2 justify-content-center">
+                            <span>First name</span>
+                        </div>
+
+                        <div class="row"><br/></div>
+                        <div class="row mt-3 justify-content-center">
+                            <span>Last name</span>
+                        </div>
+
+                        <div class="row"><br/></div>
+                        <div class="row mt-2 justify-content-center">
+                            <span>Email</span>
+                        </div>
+
+                        <div class="row"><br/></div>
+                        <div class="row mt-3 justify-content-center">
+                            <span>Password</span>
+                        </div>
+
+                        
+                        <div class="row"><br/></div>
+
+                    </div>
+                    <div class="col-sm-8">
+                        <input [(ngModel)]="user.f_name" type="text" size="50" pInputText>
+                        <div class="row"><br/></div>
+    
+                        <input [(ngModel)]="user.l_name" type="text" size="50" pInputText>
+                        <div class="row"><br/></div>
+    
+                        <input [(ngModel)]="user.email" type="text" size="50" pInputText>
+                        <div class="row"><br/></div>
+
+                        <input [(ngModel)]="user.password" type="password" size="50" pInputText>
+                        <div class="row"><br/></div>
+    
+                    </div>
+                </div>
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="btn btn-primary" (click)="addUser()">Submit</button>
+                </div>
+            </div>
+
+        </p-fieldset>
+
+    </div>
+
+    <div class="row"><br/></div>
+
+    <div class="row-flex">
+
+        <p-fieldset legend="Delete User" [toggleable]="true" [collapsed]="true">
+
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-sm-4">
+    
+                        <div class="row mt-2 justify-content-center">
+                            <span>Email</span>
+                        </div>
+
+                        
+
+                    </div>
+                    <div class="col-sm-8">
+                        <input [(ngModel)]="email" type="text" size="50" pInputText>
+                        <div class="row"><br/></div>
+    
+    
+                    </div>
+                </div>
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="btn btn-warning" (click)="deleteUser()">Delete</button>
+                </div>
+            </div>
+
+        </p-fieldset>
+        
+    </div>
+</div>
