--- a/ui-project/src/app/group-management/group.component.html
+++ b/ui-project/src/app/group-management/group.component.html
@@ -1,1 +1,126 @@
-group
+<div class="container mt-4">
+    <div class="row-flex">
+
+        <p-fieldset legend="Add User to existing Group" [toggleable]="true" [collapsed]="true">
+
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Email</span>
+                        </div>
+                        <div class="row"><br /></div>
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Group</span>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-8">
+
+                        <input [(ngModel)]="addEmail" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+                        <input [(ngModel)]="toGroup" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+
+                    </div>
+                </div>
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="btn btn-primary" (click)="addUser()">Submit</button>
+                </div>
+            </div>
+
+        </p-fieldset>
+
+
+        <div class="row"><br /></div>
+
+        <p-fieldset legend="Create new Group" [toggleable]="true" [collapsed]="true" >
+
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Group name</span>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-8">
+
+                        <input [(ngModel)]="createGroup" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+
+                    </div>
+                </div>
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="btn btn-primary" (click)="createGr()">Submit</button>
+                </div>
+            </div>
+
+        </p-fieldset>
+
+        <div class="row"><br /></div>
+
+        <p-fieldset legend="Delete user from Group" [toggleable]="true" [collapsed]="true" >
+
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Email</span>
+                        </div>
+                        <div class="row"><br /></div>
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Group</span>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-8">
+
+                        <input [(ngModel)]="deleteEmail" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+                        <input [(ngModel)]="fromGroup" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+
+                    </div>
+                </div>
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="btn btn-primary" (click)="deleteUser()">Submit</button>
+                </div>
+            </div>
+
+
+        </p-fieldset>
+
+        <div class="row"><br /></div>
+
+        <p-fieldset legend="Delete Group" [toggleable]="true" [collapsed]="true" >
+
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Group name</span>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-8">
+
+                        <input [(ngModel)]="deleteGroup" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+
+                    </div>
+                </div>
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="btn btn-primary" (click)="deleteGr()">Submit</button>
+                </div>
+            </div>
+
+        </p-fieldset>
+    </div>
+</div>
