--- a/ui-project/src/app/app.component.html
+++ b/ui-project/src/app/app.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<div *ngIf="loggedUser; then logged else unauth" class="container h-100"></div>
+<div *ngIf="!loggedUser; then unauth else logged" class="container h-100"></div>
 <ng-template #logged>
 
     <div class="container-fluid">
