--- a/ui-project/src/app/group-management/group.component.html
+++ b/ui-project/src/app/group-management/group.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 mb-5">
     <div class="row-flex">
 
         <p-fieldset legend="Add User to existing Group" [toggleable]="true" [collapsed]="true">
@@ -36,7 +36,7 @@
 
         <div class="row"><br /></div>
 
-        <p-fieldset legend="Create new Group" [toggleable]="true" [collapsed]="true" >
+        <p-fieldset legend="Create new Group" [toggleable]="true" [collapsed]="true">
 
             <div class="container mt-4">
                 <div class="row">
@@ -63,7 +63,7 @@
 
         <div class="row"><br /></div>
 
-        <p-fieldset legend="Delete user from Group" [toggleable]="true" [collapsed]="true" >
+        <p-fieldset legend="Delete user from Group" [toggleable]="true" [collapsed]="true">
 
             <div class="container mt-4">
                 <div class="row">
@@ -98,7 +98,7 @@
 
         <div class="row"><br /></div>
 
-        <p-fieldset legend="Delete Group" [toggleable]="true" [collapsed]="true" >
+        <p-fieldset legend="Delete Group" [toggleable]="true" [collapsed]="true">
 
             <div class="container mt-4">
                 <div class="row">
@@ -119,6 +119,101 @@
                 <div class="row mx-auto mt-3" style="width: 100px;">
                     <button type="button" class="btn btn-primary" (click)="deleteGr()">Submit</button>
                 </div>
+            </div>
+
+        </p-fieldset>
+
+        <div class="row"><br /></div>
+
+        <p-fieldset legend="Display Groups for User" [toggleable]="true" [collapsed]="true">
+
+            <div class="container mt-4 ">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Email</span>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-8">
+
+                        <input [(ngModel)]="findByEmail" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+
+                    </div>
+                    
+                </div>
+
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="mb-2 btn btn-primary" (click)="getUserGroups()">Submit</button>
+                </div>
+
+                <div class="row">
+
+                    <p-table *ngIf="userGroups" [value]="userGroups">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Group name</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-groups>
+                            <tr>
+                                <td>{{groups.name}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+
+                </div>
+                
+            </div>
+
+        </p-fieldset>
+
+        
+        <div class="row"><br /></div>
+
+        <p-fieldset legend="Display Users for Group" [toggleable]="true" [collapsed]="true">
+
+            <div class="container mt-4 ">
+                <div class="row">
+                    <div class="col-sm-4">
+
+                        <div class="row mt-2 justify-content-center">
+                            <span>Group name</span>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-8">
+
+                        <input [(ngModel)]="findByGroup" type="text" size="50" pInputText>
+                        <div class="row"><br /></div>
+
+                    </div>
+                    
+                </div>
+
+                <div class="row mx-auto mt-3" style="width: 100px;">
+                    <button type="button" class="mb-2 btn btn-primary" (click)="getGroupsForUser()">Submit</button>
+                </div>
+
+                <div class="row">
+
+                    <p-table *ngIf="groupsForUser" [value]="groupsForUser">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>User</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-users>
+                            <tr>
+                                <td>{{users.email}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+
+                </div>
+                
             </div>
 
         </p-fieldset>
