Add allUser list

--- a/ui-project/src/app/home/home.component.html
+++ b/ui-project/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="mt-5 row h-100 justify-content-center align-items-center ">
-    <div class="welcome h-50 w-50 row justify-content-center align-items-center login">
-        WELCOME
+    <div class="welcome h-50 w-50 row justify-content-center align-items-center login ">
+        WELCOME {{ loggedUser }}
     </div>
 </div>
