--- a/ui-project/src/app/home/home.component.scss
+++ b/ui-project/src/app/home/home.component.scss
@@ -1,9 +1,10 @@
 .welcome {
-    color: mix(#fff,#1e54e9, 85%);
-	font-size: calc(1em + 10vw) ;  
+	display: contents;
+    color: mix(#fff,#0737bd, 85%);
+	font-size: calc(1em + 5vw) ;  
 	font-weight: 50;
 	text-shadow: 
-		-0.0075em 0.0075em 0 mix(#fff, #1e54e9, 94%),
+		-0.0075em 0.0075em 0 mix(#fff, #0737bd, 94%),
 		0.005em 0.005em 0 mix(#fff,#1e54e9, 60%),
 		0.01em 0.01em 0 mix(#fff,#1e54e9, 62%), 
 		0.015em 0.015em mix(#fff,#1e54e9, 64%), 
